DigicielFull/force-app/main/default/objects/DealHub__DealHub_Opportunity_Answer__c/DealHub__DealHub_Opportunity_Answer__c.object-meta.xml
<CustomObject>
    <label>DealHub Opportunity Answer</label>
    <nameField>
        <label>DealHub Opportunity Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealHub Opportunity Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>