DigicielFull/force-app/main/default/objects/DealHub__DealHub_Opportunity_Answer__c/fields/DealHub__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DealHub Opportunity Answers</relationshipLabel>
    <relationshipName>DealHub_Opportunity_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>