DigicielFull/force-app/main/default/objects/DealHub__DealHub_Opportunity_Answer__c/fields/DealHub__Question_ID__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Question_ID__c</fullName>
    <label>Question ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>