DigicielFull/force-app/main/default/objects/DealHub__DealHub_Opportunity_Answer__c/fields/DealHub__Question_Value__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Question_Value__c</fullName>
    <label>Question Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>